--- a/A_peak_finder_teng.gao.ipynb
+++ b/A_peak_finder_teng.gao.ipynb
@@ -34,28 +34,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import OrderedDict\n",
+    "\n",
+    "import numpy as np\n",
     "def find_peaks(arr):\n",
     "    # YOUR CODE HEER\n",
+    "    dict_peaks = {\"pos\" : [], \"peaks\" : []}\n",
     "    if len(arr) <= 2:\n",
-    "        print(\"The array is too short.\")\n",
+    "        return(dict_peaks)\n",
     "    else:\n",
-    "#        dict_peaks = {\"pos\" : [], \"peaks\" : []}\n",
-    "        dict_peaks = OrderedDict()\n",
+    "\n",
     "        pos_list = []\n",
     "        peaks_list = []\n",
+    "        arr.append(100)\n",
     "        for i in range(1 , len(arr) - 1):\n",
-    "            if arr[i] > arr[i-1] and arr[i] > arr[i+1]:\n",
-    "                pos_list.append(i)\n",
-    "                peaks_list.append(arr[i])\n",
+    "            if arr[i] > arr[i-1] and arr[i] >= arr[i+1]:\n",
+    "                if arr[i] == arr[i+1]:\n",
+    "                    j = i\n",
+    "                    while arr[i] >= arr[j+1] and j < len(arr) - 2:\n",
+    "                        j += 1   \n",
+    "                        if arr[i] > arr[j]:                       \n",
+    "                            pos_list.append(i)\n",
+    "                            peaks_list.append(arr[i])\n",
+    "                            break\n",
+    "                elif arr[i] != arr[i+1]:\n",
+    "                    pos_list.append(i)\n",
+    "                    peaks_list.append(arr[i])\n",
     "        dict_peaks[\"pos\"] = pos_list\n",
     "        dict_peaks[\"peaks\"] = peaks_list\n",
-    "\n",
-    "\n",
     "        return(dict_peaks)\n",
     "    \n",
     "    "
@@ -63,39 +72,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OrderedDict([('pos', [3, 7]), ('peaks', [6, 3])])"
+       "{'peaks': [5, 6, 5, 5], 'pos': [2, 7, 14, 20]}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_list = [3, 2, 3, 6, 4, 1, 2, 3, 2, 1, 2, 3]\n",
+    "test_list = [1,2,5,4,3,2,3,6,4,1,2,3,3,4,5,3,2,1,2,3,5,5,4,3]\n",
+    "\n",
     "find_peaks(test_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'utils'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-9147700ad0b9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m## 请运行本 Cell，得到 Test OK 后提交\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTest_PA\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTest_PA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test OK\n"
      ]
     }
    ],
